improved layer API, most datasource API calls have been deprecated and migrated to the layers API for clarity
